# AD-fbi

./: .coverage  .pypirc  LICENSE  README.md  pyproject.toml  requirement.txt  team06.xlsx
.github/workflows/: coverage.yml  test.yml
docs/: documentation.ipynb  milestone1.ipynb  milestone1.md  milestone2.ipynb  milestone2_progress.md  plot.ipynb
src/AD_fbi/: optimizers.py
src/fbi/: __init__.py  dual_number.py  forward_mode.py  optimizers.py  test.ipynb
src/tests/: test_dual_number.py  test_forward_mode.py  test_optimizers.py
